--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
 		"start": "node build/app.js",
 		"build": "ts-node src/app.ts"
 	},
-	"dependencies": {},
+	"dependencies": {
+		"express": "^4.17.1",
+		"validate-all-types": "^1.4.1"
+	},
 	"engines": {
 		"node": ">=0.12"
 	},
 	"engineStrict": true,
 	"devDependencies": {
+		"@types/express": "^4.17.11",
 		"@types/node": "^14.14.37",
 		"ts-node": "^9.1.1",
 		"typescript": "^4.2.3"
