--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
 	"semi": false,
-	"arrowParens": "always",
+	"arrowParens": "avoid",
 	"trailingComma": "none",
-	"jsxSingleQuote": false
+	"jsxSingleQuote": false,
+	"jsxBracketSameLine": true
 }
