--- a/package.json
+++ b/package.json
@@ -5,19 +5,21 @@
 	"author": "zS1L3NT",
 	"scripts": {
 		"start": "node dist/app.js",
-		"dev": "ts-node --files src/app.ts"
+		"dev": "ts-node --files src/app.ts",
+		"test": "jest"
 	},
 	"dependencies": {
 		"express": "^4.17.2",
 		"validate-any": "^1.2.1"
 	},
-	"engines": {
-		"node": ">=0.12"
-	},
-	"engineStrict": true,
 	"devDependencies": {
+		"@babel/core": "^7.17.2",
+		"@babel/preset-env": "^7.16.11",
+		"@babel/preset-typescript": "^7.16.7",
 		"@types/express": "^4.17.13",
+		"@types/jest": "^27.4.0",
 		"@types/node": "^17.0.16",
+		"jest": "^27.5.1",
 		"ts-node": "^10.5.0",
 		"typescript": "^4.5.5"
 	}
